# macos-container-agents

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  current-state.md  feature_list.json  init.sh  pins.toml  progress.md  session-handoff.md
crates/codex/ansi-escape/: Cargo.toml
crates/codex/ansi-escape/src/: lib.rs
crates/codex/app-server-client/: Cargo.toml
crates/codex/app-server-client/src/: lib.rs
crates/codex/app-server-protocol/: Cargo.toml
crates/codex/async-utils/: Cargo.toml
crates/codex/codex-api/: Cargo.toml
crates/codex/codex-client/: Cargo.toml
crates/codex/codex-experimental-api-macros/: Cargo.toml
crates/codex/config/: Cargo.toml
crates/codex/connectors/: Cargo.toml
crates/codex/context-fragments/: Cargo.toml
crates/codex/core/: Cargo.toml
crates/codex/core-skills/: Cargo.toml
crates/codex/core-skills/src/: lib.rs
crates/codex/core/src/: exec_policy.rs  lib.rs  windows_sandbox.rs
crates/codex/core/src/config/: edit.rs  mod.rs  network_proxy_spec.rs  resolved_permission_profile.rs
crates/codex/core/src/unified_exec/: mod.rs
crates/codex/exec-server/: Cargo.toml
crates/codex/exec-server-protocol/: Cargo.toml
crates/codex/execpolicy/: Cargo.toml
crates/codex/features/: Cargo.toml
crates/codex/file-search/: Cargo.toml
crates/codex/file-system/: Cargo.toml
crates/codex/git-utils/: Cargo.toml
crates/codex/install-context/: Cargo.toml
crates/codex/model-provider-info/: Cargo.toml
crates/codex/models-manager/: Cargo.toml
crates/codex/models-manager/src/: lib.rs
crates/codex/network-proxy/: Cargo.toml
crates/codex/otel/: Cargo.toml
crates/runhaven/: Cargo.toml
crates/runhaven-cli/: Cargo.toml
crates/runhaven-cli/src/: app.rs  args.rs  diagnostics.rs  lib.rs  setup.rs
crates/runhaven-cli/src/app/: tests.rs
crates/runhaven-core/: Cargo.toml
crates/runhaven-core/src/: diagnostics.rs  doctor.rs  lib.rs  ui_contracts.rs
crates/runhaven-core/src/doctor/: runtime_pins.rs
crates/runhaven-core/src/harness/: pins.rs
crates/runhaven-core/src/image/: assets.rs  build.rs  doctor.rs  mod.rs
crates/runhaven-core/src/image/doctor/: builder.rs
crates/runhaven-core/src/provider/: auth_broker.rs  auth_profiles.rs  endpoints.rs  mod.rs  observability.rs  runtime.rs
crates/runhaven-core/src/provider/auth_broker/: headers.rs
crates/runhaven-core/src/provider/egress/: tests.rs
crates/runhaven-core/src/provider/runtime/: tests.rs
crates/runhaven-core/src/records/: io.rs  mod.rs  run_history.rs
crates/runhaven-core/src/records/run_history/: diff.rs  log.rs
crates/runhaven-core/src/runtime/: launch.rs  lock.rs  login.rs  mod.rs  network.rs  profiles.rs  session_state.rs  state.rs
crates/runhaven-core/src/runtime/active/: inspect.rs  logs.rs  markers.rs  mod.rs  repair.rs
crates/runhaven-core/src/runtime/plans/: mod.rs  resources.rs  types.rs  validation.rs
crates/runhaven-core/src/runtime/worktrees/: commands.rs  merge.rs  mod.rs
crates/runhaven-core/src/support/: git.rs  mod.rs  paths.rs  project_checks.rs  shell.rs  validators.rs
crates/runhaven-core/tests/fixtures/apple_container/: builder-status-current.json  container-inspect-current.json  container-inspect-legacy-attachment.json  image-list-current.json  network-inspect-hostonly.json
crates/runhaven-core/tests/fixtures/ui/: agent-catalog.json  launch-plan-provider.json
crates/runhaven-tui/: Cargo.toml
crates/runhaven-tui/src/: lib.rs
crates/runhaven-tui/src/tui/: README.md  app.rs  app_event.rs  app_event_sender.rs  app_event_shared.rs  app_shell.rs  app_shell_tests.rs  custom_terminal.rs  diff_render.rs  drift_tests.rs  insert_history.rs  markdown_render.rs  markdown_render_tests.rs  mod.rs  motion.rs  shimmer.rs  status_indicator_widget.rs  style.rs  terminal_hyperlinks.rs  terminal_palette.rs  terminal_probe.rs  test_backend.rs  test_support.rs  tui.rs  workspace_command.rs  wrapping.rs
crates/runhaven-tui/src/tui/app/: event_dispatch.rs  pets.rs
crates/runhaven-tui/src/tui/bottom_pane/: app_link_view.rs  approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  command_popup.rs  feedback_view.rs  footer.rs  hooks_browser_view.rs  list_selection_view.rs  mcp_server_elicitation.rs  mod.rs  pending_input_preview.rs  skill_popup.rs  skills_toggle_view.rs  status_line_setup.rs  textarea.rs  title_setup.rs  unified_exec_footer.rs
crates/runhaven-tui/src/tui/chatwidget/: pets.rs
crates/runhaven-tui/src/tui/codex_protocol/: mod.rs  models.rs  user_input.rs
crates/runhaven-tui/src/tui/history_cell/: mcp.rs  mod.rs  notices.rs  session.rs
crates/runhaven-tui/src/tui/pets/: bundled_custom.rs  mod.rs  model.rs  picker.rs  preview.rs
crates/runhaven-tui/src/tui/render/: highlight.rs  renderable.rs
crates/runhaven-tui/src/tui/runhaven/: app_server_client.rs  app_server_client_tests.rs  app_server_session.rs  app_server_session_tests.rs  launch_handoff.rs  launch_handoff_tests.rs  launch_wizard.rs  launch_wizard_picker.rs  launch_wizard_render.rs  launch_wizard_tests.rs  mod.rs  mvp.rs  mvp_render.rs  mvp_snapshots.rs  mvp_tests.rs  protocol.rs  protocol_tests.rs  service.rs  service_tests.rs  status_format.rs  status_format_tests.rs  terminal_handoff.rs  terminal_handoff_tests.rs
crates/runhaven-tui/src/tui/snapshots/: runhaven_mvp_active_runs_80x24.snap  runhaven_mvp_agent_picker_120x48.snap  runhaven_mvp_agent_picker_80x24.snap  runhaven_mvp_confirm_120x48.snap  runhaven_mvp_confirm_80x24.snap  runhaven_mvp_diagnostics_120x48.snap  runhaven_mvp_history_120x48.snap  runhaven_mvp_loaded_log_snapshot_80x24.snap  runhaven_mvp_loaded_run_diff_80x24.snap  runhaven_mvp_log_confirmation_80x24.snap  runhaven_mvp_recovery_120x48.snap  (+13 more)
crates/runhaven/src/: main.rs
crates/runhaven/tests/: cli.rs
src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-read.json  run-control.json
src-tauri/src/: contracts.rs  lib.rs
src-tauri/src/commands/: diagnostics.rs  image_status.rs  log_snapshot.rs  mod.rs  run_control.rs  run_status.rs  tests.rs
(+200 files in other folders)
