[package]
name = "runhaven"
version = "0.5.0"
edition = "2024"
default-run = "runhaven"
license = "MIT"
publish = false
description = "Run AI coding agents inside Apple container on macOS."
authors = ["Chad Boyd"]
keywords = ["ai-agents", "apple-container", "macos", "runhaven", "sandbox", "security"]

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
idna = "=1.1.0"
image = { version = "=0.25.10", default-features = false, features = ["png", "webp"] }
ipnet = "=2.12.0"
ratatui = { version = "=0.30.2", features = ["unstable-backend-writer", "unstable-widget-ref", "unstable-rendered-line-info"] }
regex = "=1.12.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
textwrap = "=0.16.2"
time = { version = "=0.3.51", features = ["formatting", "parsing"] }
toml = "=1.1.2"
unicode-width = "=0.2.2"
ureq = "=3.3.0"
url = "=2.5.8"
uuid = { version = "=1.23.3", features = ["v4"] }
vt100 = "=0.16.2"

[dev-dependencies]
insta = { version = "=1.48.0", default-features = false }
tempfile = "=3.27.0"
