[workspace]
members = [
    "crates/runhaven",
    "crates/runhaven-cli",
    "crates/runhaven-core",
    "crates/runhaven-tui",
    "src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
publish = false
authors = ["Chad Boyd"]
repository = "https://github.com/cboyd0319/RunHaven"
homepage = "https://github.com/cboyd0319/RunHaven"

[workspace.dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = { version = "=0.29.0", features = ["bracketed-paste", "event-stream"] }
derive_more = { version = "=2.1.1", features = ["is_variant"] }
idna = "=1.1.0"
image = { version = "=0.25.10", default-features = false, features = ["png", "webp"] }
insta = { version = "=1.48.0", default-features = false }
ipnet = "=2.12.0"
itertools = "=0.14.0"
pretty_assertions = "=1.4.1"
ratatui = { version = "=0.30.2", features = ["scrolling-regions", "unstable-backend-writer", "unstable-widget-ref", "unstable-rendered-line-info"] }
regex = "=1.12.4"
reqwest = { version = "=0.13.4", features = ["blocking"] }
runhaven-cli = { path = "crates/runhaven-cli", version = "=0.5.0" }
runhaven-core = { path = "crates/runhaven-core", version = "=0.5.0" }
runhaven-tui = { path = "crates/runhaven-tui", version = "=0.5.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
serial_test = "=3.5.0"
sha2 = "=0.11.0"
supports-color = "=3.0.2"
tauri = { version = "=2.11.3", features = [] }
tauri-build = { version = "=2.6.3", features = [] }
tauri-plugin-dialog = "=2.7.1"
tempfile = "=3.27.0"
textwrap = "=0.16.2"
time = { version = "=0.3.51", features = ["formatting", "parsing"] }
tokio = { version = "=1.52.3", features = ["macros", "rt", "sync", "test-util", "time"] }
tokio-stream = { version = "=0.1.18", features = ["sync"] }
tokio-util = { version = "=0.7.18", features = ["time"] }
toml = "=1.1.2"
tracing = "=0.1.44"
unicode-segmentation = "=1.13.3"
unicode-width = "=0.2.2"
ureq = "=3.3.0"
url = "=2.5.8"
uuid = { version = "=1.23.3", features = ["v4"] }
vt100 = "=0.16.2"

[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
overflow-checks = true
