[workspace]
members = [
    "crates/codex/app-server-protocol",
    "crates/codex/async-utils",
    "crates/codex/codex-api",
    "crates/codex/codex-client",
    "crates/codex/codex-experimental-api-macros",
    "crates/codex/config",
    "crates/codex/connectors",
    "crates/codex/context-fragments",
    "crates/codex/core",
    "crates/codex/core-skills",
    "crates/codex/exec-server",
    "crates/codex/exec-server-protocol",
    "crates/codex/execpolicy",
    "crates/codex/feedback",
    "crates/codex/features",
    "crates/codex/file-search",
    "crates/codex/file-system",
    "crates/codex/git-utils",
    "crates/codex/install-context",
    "crates/codex/memories/read",
    "crates/codex/model-provider-info",
    "crates/codex/models-manager",
    "crates/codex/network-proxy",
    "crates/codex/otel",
    "crates/codex/plugin",
    "crates/codex/protocol",
    "crates/codex/response-debug-context",
    "crates/codex/sandboxing",
    "crates/codex/shell-command",
    "crates/codex/terminal-detection",
    "crates/codex/utils/absolute-path",
    "crates/codex/utils/approval-presets",
    "crates/codex/utils/cache",
    "crates/codex/utils/cargo-bin",
    "crates/codex/utils/cli",
    "crates/codex/utils/elapsed",
    "crates/codex/utils/fuzzy-match",
    "crates/codex/utils/home-dir",
    "crates/codex/utils/image",
    "crates/codex/utils/output-truncation",
    "crates/codex/utils/path-utils",
    "crates/codex/utils/path-uri",
    "crates/codex/utils/plugins",
    "crates/codex/utils/pty",
    "crates/codex/utils/rustls-provider",
    "crates/codex/utils/sleep-inhibitor",
    "crates/codex/utils/string",
    "crates/codex/utils/stream-parser",
    "crates/codex/windows-sandbox-rs",
    "crates/runhaven",
    "crates/runhaven-cli",
    "crates/runhaven-core",
    "crates/runhaven-tui",
    "src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
publish = false
authors = ["Chad Boyd"]
repository = "https://github.com/cboyd0319/RunHaven"
homepage = "https://github.com/cboyd0319/RunHaven"

[workspace.dependencies]
anyhow = "=1.0.102"
arboard = { version = "=3.6.1", features = ["wayland-data-control"] }
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = { version = "=0.29.0", features = ["bracketed-paste", "event-stream"] }
derive_more = { version = "=2.1.1", features = ["is_variant"] }
dirs = "=6.0.0"
idna = "=1.1.0"
image = { version = "=0.25.10", default-features = false, features = ["png", "webp"] }
insta = { version = "=1.48.0", default-features = false }
ipnet = "=2.12.0"
itertools = "=0.14.0"
pretty_assertions = "=1.4.1"
ratatui = { version = "=0.30.2", features = ["scrolling-regions", "unstable-backend-writer", "unstable-widget-ref", "unstable-rendered-line-info"] }
regex = "=1.12.4"
reqwest = { version = "=0.13.4", features = ["blocking"] }
runhaven-cli = { path = "crates/runhaven-cli", version = "=0.5.0" }
runhaven-core = { path = "crates/runhaven-core", version = "=0.5.0" }
runhaven-tui = { path = "crates/runhaven-tui", version = "=0.5.0" }
schemars = "=0.8.22"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
serial_test = "=3.5.0"
sha2 = "=0.11.0"
shlex = "=1.3.0"
strum = "=0.27.2"
strum_macros = "=0.28.0"
supports-color = "=3.0.2"
syntect = "=5.3.0"
tauri = { version = "=2.11.3", features = [] }
tauri-build = { version = "=2.6.3", features = [] }
tauri-plugin-dialog = "=2.7.1"
tempfile = "=3.27.0"
textwrap = "=0.16.2"
time = { version = "=0.3.51", features = ["formatting", "parsing"] }
tokio = { version = "=1.52.3", features = ["macros", "rt", "sync", "test-util", "time"] }
tokio-stream = { version = "=0.1.18", features = ["sync"] }
tokio-util = { version = "=0.7.18", features = ["time"] }
toml = "=1.1.2"
tracing = "=0.1.44"
ts-rs = { version = "=11.1.0", features = ["no-serde-warnings", "serde-json-impl"] }
two-face = { version = "=0.5.1", default-features = false, features = ["syntect-default-onig"] }
unicode-segmentation = "=1.13.3"
unicode-width = "=0.2.2"
ureq = "=3.3.0"
url = "=2.5.8"
uuid = { version = "=1.23.3", features = ["v4"] }
vt100 = "=0.16.2"

[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
overflow-checks = true

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }
