[package]
name = "runhaven-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RunHaven Tauri desktop shell."
build = "build.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
runhaven-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true

[dev-dependencies]
runhaven-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
