[package]
name = "runhaven-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line presentation layer for RunHaven."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
runhaven-core.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
runhaven-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
