[package]
name = "runhaven-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Codex-vendored terminal UI layer for RunHaven."

[features]
codex-vendored-tests = []

[lints.rust]
warnings = { level = "deny", priority = -1 }
# The Codex-vendored terminal probe uses small Unix FFI calls for fd
# duplication, nonblocking mode, reads, and polling. Keep this exception scoped
# to the TUI crate; core runtime and CLI crates inherit workspace unsafe forbid.
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
image.workspace = true
itertools.workspace = true
ratatui.workspace = true
regex.workspace = true
reqwest.workspace = true
runhaven-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
supports-color.workspace = true
textwrap.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true
vt100.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
insta.workspace = true
pretty_assertions = "=1.4.1"
rand = { version = "=0.9.4", default-features = false, features = ["std", "std_rng"] }
serial_test = "=3.5.0"
tempfile.workspace = true
