[package]
name = "runhaven-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Codex-vendored terminal UI layer for RunHaven."

[features]
codex-vendored-tests = []

[lints.rust]
warnings = { level = "deny", priority = -1 }
# The Codex-vendored terminal probe uses small Unix FFI calls for fd
# duplication, nonblocking mode, reads, and polling. Keep this exception scoped
# to the TUI crate; core runtime and CLI crates inherit workspace unsafe forbid.
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
derive_more.workspace = true
dirs.workspace = true
image.workspace = true
itertools.workspace = true
codex-app-server-protocol = { path = "../codex/app-server-protocol" }
codex-config = { path = "../codex/config" }
codex-connectors = { path = "../codex/connectors" }
codex-core-skills = { path = "../codex/core-skills" }
codex-feedback = { path = "../codex/feedback" }
codex-features = { path = "../codex/features" }
codex-file-search = { path = "../codex/file-search" }
codex-models-manager = { path = "../codex/models-manager" }
codex-plugin = { path = "../codex/plugin" }
codex-protocol = { path = "../codex/protocol" }
codex-shell-command = { path = "../codex/shell-command" }
codex-utils-absolute-path = { path = "../codex/utils/absolute-path" }
codex-utils-approval-presets = { path = "../codex/utils/approval-presets" }
codex-utils-cli = { path = "../codex/utils/cli" }
codex-utils-elapsed = { path = "../codex/utils/elapsed" }
codex-utils-fuzzy-match = { path = "../codex/utils/fuzzy-match" }
codex-utils-plugins = { path = "../codex/utils/plugins" }
codex-utils-path-uri = { path = "../codex/utils/path-uri" }
codex-utils-sleep-inhibitor = { path = "../codex/utils/sleep-inhibitor" }
ratatui.workspace = true
regex.workspace = true
reqwest.workspace = true
runhaven-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shlex.workspace = true
strum.workspace = true
strum_macros.workspace = true
supports-color.workspace = true
syntect.workspace = true
tempfile.workspace = true
textwrap.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ts-rs.workspace = true
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true
vt100.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
insta.workspace = true
pretty_assertions = "=1.4.1"
rand = { version = "=0.9.4", default-features = false, features = ["std", "std_rng"] }
serial_test = "=3.5.0"
tempfile.workspace = true
