[package]
name = "codex-ansi-escape"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "codex_ansi_escape"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tracing = { workspace = true, features = ["log"] }
