[package]
name = "codex-app-server-protocol"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
[lib]
name = "codex_app_server_protocol"
path = "src/lib.rs"
doctest = false


[dependencies]
anyhow = { version = "=1.0.102" }
clap = { version = "=4.6.1", features = ["derive"] }
codex-experimental-api-macros = { path = "../codex-experimental-api-macros" }
codex-protocol = { path = "../protocol" }
codex-shell-command = { path = "../shell-command" }
codex-utils-absolute-path = { path = "../utils/absolute-path" }
codex-utils-path-uri = { path = "../utils/path-uri" }
schemars = { version = "=0.8.22" }
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = { version = "=1.0.150" }
serde_with = { version = "=3.17.0" }
strum_macros = { version = "=0.28.0" }
thiserror = { version = "=2.0.18" }
rmcp = { version = "=1.8.0", default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
ts-rs = { version = "=11.1.0" }
inventory = { version = "=0.3.24" }
tracing = { version = "=0.1.44" }
uuid = { version = "=1.23.3", features = ["serde", "v7"] }

[dev-dependencies]
anyhow = { version = "=1.0.102" }
codex-utils-cargo-bin = { path = "../utils/cargo-bin" }
pretty_assertions = { version = "=1.4.1" }
similar = { version = "=2.7.0" }
tempfile = { version = "=3.27.0" }
