[package]
name = "codex-core-skills"
version = "0.0.0"
edition.workspace = true
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[lib]
doctest = false
name = "codex_core_skills"
path = "src/lib.rs"

[dependencies]
codex-exec-server = { path = "../exec-server" }
codex-protocol = { path = "../protocol" }
codex-utils-absolute-path = { path = "../utils/absolute-path" }
codex-utils-path-uri = { path = "../utils/path-uri" }
