[package]
name = "codex-core"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "codex_core"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { version = "=1.0.102" }
codex-config = { path = "../config" }
codex-execpolicy = { path = "../execpolicy" }
codex-model-provider-info = { path = "../model-provider-info" }
codex-protocol = { path = "../protocol" }
codex-utils-absolute-path = { path = "../utils/absolute-path" }
codex-utils-path = { path = "../utils/path-utils" }
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.52.3", features = ["fs"] }
toml = { version = "=1.1.2", features = ["preserve_order"] }
toml_edit = { version = "=0.24.0" }
