[package]
name = "codex-file-search"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "codex-file-search"
path = "src/main.rs"

[lib]
name = "codex_file_search"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { version = "=1.0.102" }
clap = { version = "=4.6.1", features = ["derive"] }
crossbeam-channel = { version = "=0.5.15" }
ignore = { version = "=0.4.25" }
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }
tokio = { version = "=1.52.3", features = ["full"] }

[dev-dependencies]
pretty_assertions = { version = "=1.4.1" }
tempfile = { version = "=3.27.0" }
