[package]
name = "codex-install-context"
edition.workspace = true
version = "0.0.0"
license = "Apache-2.0"
publish = false

[lib]
name = "codex_install_context"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-utils-absolute-path = { path = "../utils/absolute-path" }
codex-utils-home-dir = { path = "../utils/home-dir" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
